Linked the search activity with the profil page Add a button that go to the profil page //temporaire pour essaie Modify the profile variables like the new BDD structure modidfy some items place in profile_layout

--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:defaultFocusHighlightEnabled="true"
-    tools:context=".profile">
+    tools:context=".profile"
+    tools:showIn="@layout/activity_main3">
 
     <ImageView
         android:id="@+id/U_P_picture"
@@ -26,7 +27,7 @@
         android:layout_width="291dp"
         android:layout_height="178dp"
         android:layout_marginStart="80dp"
-        android:layout_marginBottom="140dp"
+        android:layout_marginBottom="170dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -38,7 +39,7 @@
         android:layout_width="328dp"
         android:layout_height="65dp"
         android:layout_marginStart="40dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginBottom="132dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="163dp"
-        android:layout_marginTop="616dp"
+        android:layout_marginTop="660dp"
         android:layout_marginEnd="163dp"
         android:text="Contact"
         android:textColor="@color/Black"
@@ -240,7 +241,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginBottom="220dp"
+        android:layout_marginBottom="250dp"
         android:text="Matin :"
         android:textColor="@color/Black"
         android:textSize="18dp"
@@ -253,7 +254,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="133dp"
+        android:layout_marginBottom="153dp"
         android:text="Soir :"
         android:textColor="@color/Black"
         android:textSize="18dp"
