--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,4 +49,12 @@
         android:layout_marginBottom="5dp">
     </androidx.recyclerview.widget.RecyclerView>
 
+    <Button
+        android:id="@+id/open_profile_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="150sp"
+        android:layout_marginTop="63sp"
+        android:text="Button" />
+
 </RelativeLayout>
