--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/background"
     android:defaultFocusHighlightEnabled="true"
     tools:context=".profile"
-    tools:showIn="@layout/activity_main3">
+    tools:showIn="@layout/profile_layout">
 
     <ImageView
         android:id="@+id/U_P_picture"
