--- a/app/src/main/res/layout/place_activity.xml
+++ b/app/src/main/res/layout/place_activity.xml
@@ -40,7 +40,6 @@
         android:layout_marginTop="224dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/sarala"
-        android:text="Cycle Préparatoire"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="18sp"
@@ -53,8 +52,19 @@
         android:layout_height="79dp"
         android:layout_marginStart="29dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="83dp"
-        android:background="@drawable/button"
+        android:layout_marginBottom="98dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/ImageForBtn"
+        android:layout_width="373dp"
+        android:layout_height="86dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="89dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -65,9 +75,8 @@
         android:layout_height="41dp"
         android:layout_marginStart="130dp"
         android:layout_marginEnd="90dp"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="108dp"
         android:fontFamily="@font/comfortaa"
-        android:text="@string/username"
         android:textAlignment="viewStart"
         android:textColor="@color/white"
         android:textSize="15sp"
@@ -80,18 +89,21 @@
         android:layout_width="79dp"
         android:layout_height="47dp"
         android:layout_marginStart="40dp"
-        android:layout_marginBottom="103dp"
+        android:layout_marginBottom="113dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ased1302" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/place_icon"
         android:layout_width="120dp"
         android:layout_height="141dp"
-        app:srcCompat="@drawable/place"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="47dp" />
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="47dp"
+        android:layout_marginEnd="141dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/place" />
 
     <ImageButton
         android:id="@+id/email_btn2"
@@ -144,6 +156,32 @@
         android:focusedByDefault="false"
         android:src="@drawable/fax"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/employerStat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="174dp"
+        android:layout_marginEnd="174dp"
+        android:layout_marginBottom="175dp"
+        android:textColor="@color/Black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/noEmployer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="128dp"
+        android:textColor="@color/Black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
