--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,8 +53,8 @@
         android:id="@+id/open_profile_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="150sp"
+        android:layout_marginLeft="100sp"
         android:layout_marginTop="63sp"
-        android:text="Button" />
+        android:text="Aller vers le profil" />
 
 </RelativeLayout>
