--- a/app/src/main/res/layout/place_activity.xml
+++ b/app/src/main/res/layout/place_activity.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="388dp"
         android:background="@color/white"
-        android:text="Cycle Préparatoire"
+        android:text="Description de la place"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -180,6 +180,19 @@
         android:textColor="@color/Black"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="296dp"
+        android:layout_height="61dp"
+        android:layout_marginBottom="280dp"
+        android:text="la partie description n'est pas encore terminé"
+        android:textAlignment="center"
+        android:textColor="@color/Black"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
