I added the click on items and the NAV-BAR will be closed on click

--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Guiddini"
+        android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold" />
 
@@ -24,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="guiddini@contact.dz"
-        android:textSize="14sp"/>
+        android:textColor="@color/white"
+        android:textSize="14sp" />
 
 </LinearLayout>
