--- a/app/src/main/res/layout/place_activity.xml
+++ b/app/src/main/res/layout/place_activity.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="388dp"
         android:background="@color/white"
-        android:text="Description de la place"
+        android:text="@string/description_de_la_place"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -193,7 +193,7 @@
         android:layout_width="296dp"
         android:layout_height="61dp"
         android:layout_marginBottom="280dp"
-        android:text="la partie description n'est pas encore terminé"
+        android:text="@string/la_partie_description_n_est_pas_encore_termin"
         android:textAlignment="center"
         android:textColor="@color/Black"
         android:textSize="18sp"
