--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -82,7 +82,7 @@
         android:layout_marginStart="163dp"
         android:layout_marginTop="660dp"
         android:layout_marginEnd="163dp"
-        android:text="Contact"
+        android:text="@string/contact"
         android:textColor="@color/Black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -98,7 +98,7 @@
         android:layout_marginStart="106dp"
         android:layout_marginTop="370dp"
         android:layout_marginEnd="107dp"
-        android:text="Horaires du travail"
+        android:text="@string/horaires_du_travail"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -126,7 +126,7 @@
             android:layout_height="20dp"
             android:layout_marginLeft="8dp"
             android:background="@drawable/button"
-            android:text="DIMANCHE"
+            android:text="@string/dimanche"
             android:textColor="@android:color/white"
             android:textSize="10sp"
             android:textStyle="bold" />
@@ -137,7 +137,7 @@
             android:layout_height="20dp"
             android:layout_marginLeft="8dp"
             android:background="@drawable/button"
-            android:text="LUNDI"
+            android:text="@string/lundi"
             android:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="bold" />
@@ -149,7 +149,7 @@
             android:layout_height="20dp"
             android:layout_marginLeft="8dp"
             android:background="@drawable/button"
-            android:text="MARDI"
+            android:text="@string/mardi"
             android:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="bold" />
@@ -160,7 +160,7 @@
             android:layout_height="20dp"
             android:layout_marginLeft="8dp"
             android:background="@drawable/button"
-            android:text="MERCREDI"
+            android:text="@string/mercredi"
             android:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="bold" />
@@ -172,7 +172,7 @@
             android:layout_marginLeft="8dp"
             android:background="@drawable/button"
             android:hapticFeedbackEnabled="false"
-            android:text="JEUDI"
+            android:text="@string/jeudi"
             android:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="bold" />
@@ -265,7 +265,7 @@
         android:layout_marginStart="29dp"
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="160dp"
-        android:text="NB : cliquer sur les jours pour voir les horaires du travail"
+        android:text="@string/nb_cliquer_sur_les_jours_pour_voir_les_horaires_du_travail"
         android:textAlignment="center"
         android:textColor="@color/Black"
         android:textSize="20sp"
