I added the rating layout and java code and also the drawables and added in the styles the rating style so the task is working pretty good

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="Black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="colorActive">#d4d4d4</color>
+    <color name="colorStand">#F22096</color>
 </resources>
