--- a/app/src/main/res/layout/rating_layout.xml
+++ b/app/src/main/res/layout/rating_layout.xml
@@ -5,38 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bgmp"
-    tools:context=".MainActivity">
+    tools:context=".Rating">
 
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:background="@drawable/rating_bg"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="591dp" />
 
     <ImageView
         android:id="@+id/starone"
         android:layout_width="190dp"
         android:layout_height="250dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="110dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="450dp"
+        android:layout_marginBottom="230dp"
         android:src="@drawable/star3"
         app:layout_constraintBottom_toTopOf="@id/btnfeedback"
         app:layout_constraintEnd_toEndOf="@id/btnfeedback"
-        app:layout_constraintHorizontal_bias="0.636"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="220dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="116dp"
+        android:layout_marginBottom="240dp"
         android:background="@drawable/bgrate"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -49,51 +46,147 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Rate The Service"
+            android:text="You liked the app? please give us a feedback!"
             android:textAlignment="center"
-            android:textColor="#848484"
-            android:textSize="20sp" />
+            android:textColor="@color/Black"
+            android:textSize="17sp"
+            android:textStyle="bold" />
 
 
         <RatingBar
             android:id="@+id/rateStars"
             android:layout_width="wrap_content"
-            android:theme="@style/RatingBar"
             android:layout_height="wrap_content"
             android:layout_marginLeft="65dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="42dp"
             android:layout_marginBottom="10dp"
             android:numStars="5"
             android:rating="3"
-            android:stepSize="1" />
+            android:stepSize="1"
+            android:theme="@style/RatingBar" />
+
+        <TextView
+            android:id="@+id/love"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="256dp"
+            android:layout_marginTop="-15dp"
+            android:text="I loved it"
+            android:textAlignment="center"
+            android:textColor="@color/Black"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/hate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="-20dp"
+            android:text="I hated it "
+            android:textAlignment="center"
+            android:textColor="@color/Black"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/resultrate"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="20dp"
             android:text="Good Enough"
             android:textAlignment="center"
-            android:textColor="#848484"
-            android:textSize="32sp" />
+            android:textColor="@color/Black"
+            android:textSize="25sp" />
 
 
     </LinearLayout>
 
     <Button
+
         android:id="@+id/btnfeedback"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_width="259dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/button"
-        android:text="Confirm"
+        android:layout_marginBottom="150dp"
+        android:background="@drawable/mybutton"
+        android:fontFamily="@font/sarala"
+        android:text="Submit"
         android:textAllCaps="false"
-        android:textColor="#080808"
-        android:textSize="22sp"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/findus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="172dp"
+        android:layout_marginEnd="169dp"
+        android:layout_marginBottom="70dp"
+        android:text="Find us"
+        android:textColor="@color/Black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        />
+    <ImageButton
+        android:id="@+id/facebook_btn"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="125dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@android:color/transparent"
+        android:defaultFocusHighlightEnabled="true"
+        android:focusedByDefault="false"
+        android:onClick="FacebookClique"
+        android:src="@drawable/facebook"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/instagram_btn"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="190dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@android:color/transparent"
+        android:defaultFocusHighlightEnabled="true"
+        android:focusedByDefault="false"
+        android:onClick="InstagramClique"
+        android:src="@drawable/instagram"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/google_btn"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="255dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@android:color/transparent"
+        android:defaultFocusHighlightEnabled="true"
+        android:focusedByDefault="false"
+        android:onClick="GoogleClique"
+        android:src="@drawable/google"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/ratingtitle"
+        android:layout_width="171dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="70dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ratingtitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
