I modifyed in the README too

--- a/app/src/main/res/layout-hdpi/rating_layout.xml
+++ b/app/src/main/res/layout-hdpi/rating_layout.xml
@@ -22,6 +22,7 @@
         android:layout_width="140dp"
         android:layout_height="180dp"
         android:layout_marginLeft="130dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/star3"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +33,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="37dp"
+        android:layout_marginLeft="47dp"
         android:background="@drawable/bgrate"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -126,9 +127,7 @@
         android:layout_width="183dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="115dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="116dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="0"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
