--- a/app/src/main/res/layout-xxhdpi/rating_layout.xml
+++ b/app/src/main/res/layout-xxhdpi/rating_layout.xml
@@ -22,6 +22,7 @@
         android:layout_width="140dp"
         android:layout_height="180dp"
         android:layout_marginLeft="130dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/star3"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +33,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="37dp"
+        android:layout_marginLeft="47dp"
         android:background="@drawable/bgrate"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,11 +106,9 @@
         android:layout_width="259dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="35dp"
 
 
-        android:layout_marginEnd="76dp"
-        android:layout_marginBottom="42dp"
         android:background="@drawable/mybutton"
         android:fontFamily="@font/sarala"
         android:text="Submit"
@@ -126,8 +125,7 @@
         android:layout_width="183dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="115dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="116dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="20dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
