--- a/app/src/main/res/layout/rating_layout.xml
+++ b/app/src/main/res/layout/rating_layout.xml
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="You liked the app? please give us a feedback!"
+            android:text="@string/you_liked_the_app_please_give_us_a_feedback"
             android:textAlignment="center"
             android:textColor="@color/Black"
             android:textSize="17sp"
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="256dp"
             android:layout_marginTop="-15dp"
-            android:text="I loved it"
+            android:text="@string/i_loved_it"
             android:textAlignment="center"
             android:textColor="@color/Black"
             android:textSize="16sp" />
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
             android:layout_marginTop="-20dp"
-            android:text="I hated it "
+            android:text="@string/i_hated_it"
             android:textAlignment="center"
             android:textColor="@color/Black"
             android:textSize="16sp" />
@@ -93,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="120dp"
             android:layout_marginTop="20dp"
-            android:text="Good Enough"
+            android:text="@string/good_enough"
             android:textAlignment="center"
             android:textColor="@color/Black"
             android:textSize="25sp" />
@@ -111,7 +111,7 @@
         android:layout_marginBottom="150dp"
         android:background="@drawable/mybutton"
         android:fontFamily="@font/sarala"
-        android:text="Submit"
+        android:text="@string/submit"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -128,7 +128,7 @@
         android:layout_marginStart="172dp"
         android:layout_marginEnd="169dp"
         android:layout_marginBottom="70dp"
-        android:text="Find us"
+        android:text="@string/find_us"
         android:textColor="@color/Black"
         android:textSize="24sp"
         android:textStyle="bold"
